--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
+    "@unform/core": "^2.1.0",
+    "@unform/mobile": "^2.1.0",
     "axios": "^0.19.2",
     "expo": "^37.0.0",
     "expo-asset": "~8.1.4",
@@ -42,7 +44,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.6",
     "react-navigation-drawer": "^2.4.12",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
