--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -1,25 +1,31 @@
 {
+
     // Use IntelliSense to learn about possible attributes.
+
     // Hover to view descriptions of existing attributes.
+
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+
     "version": "0.2.0",
+
     "configurations": [
+
         {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome",
-            "url": "http://localhost:3333",
-            "webRoot": "${workspaceFolder}/src/index.js",
-        },
-        
-        {
-            "name": "Launch via npm",
+
             "type": "node",
-            "request": "launch",
-            "cwd": "${workspaceFolder}/src/index.js",
-            "runtimeExecutable": "npm",
-            "runtimeArgs": ["nodemon", "debug"],
-            "port": 9229
-        }
+
+            "request": "attach",
+
+            "name": "Attach by Process ID",
+
+            "processId": "${command:PickProcess}",
+
+            "protocol": "inspector",
+
+            "restart": true
+
+        },
+
     ]
+
 }
